[gd_scene load_steps=9 format=3 uid="uid://cc4gm4iiyhk8i"]

[ext_resource type="Script" path="res://card_ui/card_ui.gd" id="1_ed5up"]
[ext_resource type="Script" path="res://card_ui/card_state_machine.gd" id="1_jgfex"]
[ext_resource type="Script" path="res://card_ui/idle_card_state.gd" id="3_x413l"]
[ext_resource type="Script" path="res://card_ui/hovered_card_state_node.gd" id="4_xv0dm"]
[ext_resource type="Script" path="res://card_ui/selected_card_state_node.gd" id="5_lp2jx"]
[ext_resource type="Script" path="res://card_ui/released_card_state_node.gd" id="6_ur0bd"]
[ext_resource type="PackedScene" uid="uid://csk6m6hxi8rf5" path="res://card_ui/card_visuals.tscn" id="7_pvtpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufbqr"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ed5up")

[node name="CardBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardVisuals" parent="CardBackground" instance=ExtResource("7_pvtpx")]
visible = false

[node name="Detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_ufbqr")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_node")]
script = ExtResource("1_jgfex")
starting_node = NodePath("IdleCardStateNode")

[node name="IdleCardStateNode" type="Node" parent="CardStateMachine"]
script = ExtResource("3_x413l")

[node name="HoveredCardStateNode" type="Node" parent="CardStateMachine"]
script = ExtResource("4_xv0dm")
state = 1

[node name="SelectedCardStateNode" type="Node" parent="CardStateMachine"]
script = ExtResource("5_lp2jx")
state = 2

[node name="ReleasedCardStateNode" type="Node" parent="CardStateMachine"]
script = ExtResource("6_ur0bd")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
